2010-09-22  Eric Botcazou  <ebotcazou@adacore.com>

	PR target/35664
	* config/sparc/constraints.md ('e'): Return NO_REGS if !TARGET_FPU.
	('f'): Likewise.

2010-09-22  Tristan Gingold  <gingold@adacore.com>

	* config/alpha/alpha.c (alpha_use_linkage): Initialize target field.

2010-09-22  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/i386.h (MAX_STRINGOP_ALGS): Fix typo in the name.
	* config/i386/i386.c (decide_alg): Update for rename.

2010-09-22  Jakub Jelinek  <jakub@redhat.com>

	PR rtl-optimization/45739
	* simplify-rtx.c (simplify_binary_operation_1): Optimize even
	vector mode | CONST0_RTX (mode) and ^ CONST0_RTX (mode).

2010-09-21  Anatoly Sokolov  <aesok@post.ru>

	* config/rs6000/rs6000.h (OUTPUT_ADDR_CONST_EXTRA): Remove macros.
	* config/rs6000/rs6000-protos.h (rs6000_output_addr_const_extra):
	Remove.
	* config/rs6000/rs6000.c (rs6000_output_addr_const_extra): Make static.
	(TTARGET_ASM_OUTPUT_ADDR_CONST_EXTRA): Define.

2010-09-21  Nicola Pero  <nicola.pero@meta-innovation.com>

	PR objc/23710
	* c-parser.c (c_parser_objc_method_definition): Check the return
	value of objc_start_method_definition and if false is returned,
	parse the method definition but emit no code.

2010-09-21  Nicola Pero  <nicola.pero@meta-innovation.com>

	PR objc/25965
	* c-decl.c (detect_field_duplicates): If compiling Objective-C,
	call objc_get_interface_ivars ().

2010-09-21  Kai Tietz  <kai.tietz@onevision.com>

	PR target/45694
	* config/i386/i386.c (ix86_expand_prologue): Save r10 in case that
	static chain-register is used for 64-bit.

2010-09-21  Richard Guenther  <rguenther@suse.de>

	* dwarf2out.c (is_cu_die): New function.
	(add_pubtype): Use it.
	(gen_subprogram_die): Likewise.
	(gen_struct_or_union_type_die): Likewise.
	(dwarf2out_finish): Likewise.
	(comp_unit_die): Rename to ...
	(single_comp_unit_die): ... this.
	(comp_unit_die): New function lazily constructing and
	returning single_comp_unit_die.